--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,158 @@
     width: 100%;
     height: 82px;
     background-color: #05336B;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.search-l {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: white solid 1px;
+    width: 246px;
+    height: 70px;
+}
+
+.logo {
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    color: #05336B;
+    padding-top: 10px;
+    font-size: 12px;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.ibm-tag {
+    border: white solid 1px;
+    color: white;
+    width: 150px;
+    margin-left: 10px;
+}
+
+.search-m {
+    width: 100%;
+    height: 41px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: solid magenta 1px;
+}
+
+.search-box {
+    width: 400px;
+    height: 41px;
+    border-radius: 20px;
+    background-color: #375C89;
+    display: flex;
+    align-items: center;
+    border: solid 1px orange;
+}
+
+.search-text {
+    color: white;
+    border: violet 1px solid;
+    width: 380px;
+    height: 38px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    padding-top: 15px;
+}
+
+.search-icon {
+    width: 38px;
+    height: 38px;
+    border: solid green 1px;
+    margin-right: 5px;
+    padding-top: 4px;
+}
+
+.search-r {
+    width: 500px;
+    height: 41px;
+    display: flex;
+    align-items: center;
+    border: solid teal 1px;
+    justify-content: space-between;
+}
+
+.unit-box {
+    width: 120px;
+    height: 41px;
+    border: red 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.unit-icon {
+    border: orange solid 1px;
+    width: 23.8px;
+    height: 23.6px;
+}
+
+.Icon--lightTheme--3RdOJ {
+    fill: #fff;
+    color: #fff;
+    --color-moon: #fff;
+    --color-cloud: #fff;
+    --color-star: #fff;
+    --color-fog: #fff;
+    --color-wind: #fff;
+    --color-sun: #fff;
+    --color-lightning: #fff;
+    --color-snowflake: #fff;
+    --color-hail: #fff;
+    --color-thunderstorm-mask: #2b2b2b;
+}
+
+.unit-text {
+    color: white;
+    font-size: 18px;
+}
+
+.premium-button {
+    background-color: white;
+    border-radius: 20px;
+    width: 90px;
+    height: 26px;
+    border: solid yellow 1px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-text {
+    color: #05336B;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.menu {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 40px;
+    height: 26px;
+    border: cyan solid 1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bar {
+    width: 35px;
+    height: 3px;
+    border-radius: 1px;
+    background-color: white;
 }
 
 .location-bar {
