--- a/top.css
+++ b/top.css
@@ -1,3 +1,7 @@
+body {
+    padding: 0px;
+    margin: 0px;
+}
 .search-bar {
     width: 100%;
     height: 82px;
@@ -5,8 +9,8 @@
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .search-l {
@@ -91,16 +95,6 @@
 .Icon--lightTheme--3RdOJ {
     fill: #fff;
     color: #fff;
-    --color-moon: #fff;
-    --color-cloud: #fff;
-    --color-star: #fff;
-    --color-fog: #fff;
-    --color-wind: #fff;
-    --color-sun: #fff;
-    --color-lightning: #fff;
-    --color-snowflake: #fff;
-    --color-hail: #fff;
-    --color-thunderstorm-mask: #2b2b2b;
 }
 
 .unit-text {
@@ -154,7 +148,7 @@
     width: 299px;
     height: 40px;
     border-right: rgba(255, 255, 255, 0.432) solid 1px;
-    margin-left: 60px;
+    margin-left: 150px;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -200,3 +194,10 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
+
+.more-forecasts {
+    display: flex;
+    justify-content: stretch;
+    align-items: center;
+}
+
