--- a/main.css
+++ b/main.css
@@ -1,9 +1,10 @@
 .main-section {
     background: rgb(115,159,214);
-    background: linear-gradient(180deg, rgba(115,159,214,1) 0%, rgba(160,183,212,1) 13%, rgba(255,255,255,1) 100%);
+    background: linear-gradient(180deg, rgba(115,159,214,1) 0%, rgba(160,183,212,1) 13%, rgba(184, 202, 230, 0.527) 100%);
     width: 100%;
     height: 2219px;
     display: flex;
+    padding-bottom: 15px;
 }
 
 .outer-container {
